--- a/data/it/tips/2-trekking.yml
+++ b/data/it/tips/2-trekking.yml
@@ -1,4 +1,68 @@
 name: Trekking
 source:
+  - icon: fa fa-id-card-o
+    number: 1
+    description: > 
+      Vi serviranno dei permessi per fare trekking in Nepal.<br>
+      - <b>TIMS Card<b/>. Non è propriamente un permesso ma più un documento per tenere traccia di tutti i trekkers per ragioni di sicurezza. Il costo è di <b>10USD</b> per i gruppi organizzati, <b>20USD</b> per chi viaggia solo.
+      Dovrete portare una copia del passaporto, 2 fototessere e indicare due contatti di emergenza (uno locale ed uno in patria).<br>
+      - <b>Trek permits</b>. In base a dove avete in programma di andare, vi verrà richiesto di acquistare un permesso specifico e pagare la fee corrispondente. Anche qui dovrete avere una copia del passaporto e 1 fototessera.<br>
+      <a href="http://www.greathimalayatrails.com/trekking-permits/" target="_blank">Qui</a> potete trovare più informazioni sul tipo di permesso che vi servirà.<br>
+      Di qualsiasi permesso abbiate bisogno, potete richiederli ad un ufficio turistico a Kathmandu o Pokhara. 
+      Noi gli abbiamo ottenuti entrambi (TIMS Card e ACAP) <a href="https://www.google.com/maps/search/tourist+service+center+kathmandu/@27.7019719,85.3147664,17z/data=!3m1!4b1" target="_blank">qui</a>, presso il Tourist Service Center a Kathmandu. Controllate gli orari di apertura prima di andarci. 
+
+  - icon: fa fa-check-square-o
+    number: 2
+    description: I permessi saranno controllati sia all'entrata che all'uscita delle aree di riferimento. Teneteli sempre a portata di mano.
+
+  - icon: fa fa-camera
+    number: 3
+    description: E' vietato fare video o utilizzare droni a determinate altitudini. Informatevi bene se avete intenzione di fare qualche cosa del genere per non incorrere in sanzioni.
+  
   - icon: fa fa-map-o
-    description: Molte persone consigliano di usare Maps.me ma abbiamo trovato Osmand più utile, specialmente per i trekking.
+    number: 4
+    description: Molte persone consigliano di utilizzare <a href="https://maps.me/en/download/" target="_blank">Maps.me</a> come applicazione per la navigazione offline. L'abbiamo trovato effettivamente utile per muoversi in città ma abbiamo preferito <a href="https://osmand.net/" target="_blank">Osmand</a> per i trekking.
+
+  - icon: fa fa-snowflake-o
+    number: 5
+    description: Il periodo migliore per fare trekking sull'Hymalaya va da Ottobre fino a metà Novembre. Ovviamente è anche il periodo più turistico, quindi se avete in programma un trekking molto battuto (es. Poon Hill) potreste ritrovarvi tra la folla. Da Novembre a fine Dicembre è comunque un buon momento perchè è meno affollato e non fa così freddo. In primavera c'è la stagione delle piogge quindi è sconsigliabile partire anche perchè molto probabilmente in alto nevicherà.
+
+  - icon: fa fa-snowflake-o
+    number: 6
+    description: Anche se non avete intenzione di raggiungere i 4.000m vi consigliamo delle scarpe in Goretex. Non sono obbligatorie ma assolutamente consigliate.
+
+  - icon: fa fa-suitcase
+    number: 7
+    description: Potrete pagare un porter per farvi trasportare i bagagli. I porter sono solitamente dei ragazzi giovani provenienti da famiglie povere. Ovunque leggerete che assumerne uno significa far girare l'economia locale e dare un aiuto a qualcuno che ne ha bisogno. Tuttavia credeteci se vi diciamo che sembra proprio una forma di schiavitù. I porters sono costretti a caricarsi di 30kg o più facendo leva con la propria testa ed utilizzando calzature non idonee ai sentieri che dovranno percorrere. Spesso anche sul ghiaccio. Quindi pensateci due volte prima di farlo.
+
+  - icon: fa fa-map-o
+    number: 8
+    description: Potrete pagare una guida che potrà, ovviamente, guidarvi, mostravi i sentieri migliori e raccontarvi storia, geografia e cultura nepalesi. A volte può aiutarvi a prenotare una stanza. potrete assumerne una direttamente sul posto, recandovi presso un'agenzia di viaggio. Tuttavia, i circuiti più comuni possono essere tranquillamente percorsi senza guida. Assicuratevi solo di studiarne la traccia prima della partenza.
+
+  - icon: fa fa-road
+    number: 9
+    description: Se il vostro percorso prevede tratti di strada con passaggi frequenti di auto, a parte i sentieri, assicuratevi di portare con voi una mascherina. Le strade sono molto polverose quindi è consigliato proteggersi il viso.
+
+  - icon: fa fa-medkit
+    number: 10
+    description: Portate sempre con voi un kit di primo soccorso. A parte nelle grandi città non troverete farmacie così facilmente. <a href="https://www.amazon.com/gp/search/ref=as_li_qf_sp_sr_il_tl?ie=UTF8&tag=allyouneeedto-20&keywords=first aid kit&index=aps&camp=1789&creative=9325&linkCode=xm2&linkId=0030b60b49de7d2d5fb7f3dda47fcb28" target="_blank">Questo</a> è il tipo di kit che abbiamo preso noi.
+  
+  - icon: fa fa-bed
+    number: 11
+    description: Partire per un trek sull'Hymalaya significa doversi trovare una stanza direttamente in loco, specialmente se viaggiate soli e senza guida. Quando arriverete alla destinazione del giorno, dovrete chiedere porta a porta se c'è una stanza libera. Non dimenticate di contrattare i prezzi. 
+
+  - icon: fa fa-bed
+    number: 12
+    description: Probabilmente consumerete almeno cena e colazione presso il lodge in cui alloggerete. I lodge hymalayani hanno praticamente tutti lo stesso menù perchè fanno parte di una sorta di comitato. Ognuno di essi ha il proprio orto, ove possibile.
+
+  - icon: fa fa-shower
+    number: 13
+    description: Non tutti i lodge hanno l'acqua calda. Vi consigliamo di portarvi lo shampoo secco per lavarvi i capelli in qualche modo pur evitando una polmonite.
+
+  - icon: fa fa-bed
+    number: 14
+    description: Ovviamente non c'è riscaldamento nei lodge in montagna. L'unica fonte di calore è una sorta di stufa che trovate nell'area comune attorno alla quale potete stendere i vostri panni ad asciugare. E' il posto perfetto intorno al quale sedersi con una tazza di te caldo per fare conversazione e scaldarsi prima di infilarsi nel sacco a pelo per la notte.
+
+  - icon: fa fa-bed
+    number: 15
+    description: Se percorrete circuiti molto frequentati durante l'alta stagione, potrebbe esserci la possibilità che non troviate stanze libere per la notte. Ovviamente nessuno vi lascerà mai dormire sotto le stelle quindi potreste trovarvi a condividere una stanza con degli sconosciuti oppure a dormire sul pavimento nella sala comune.
