[fix]: replace gmaps link with OSM

--- a/data/en/tips/2-trekking.yml
+++ b/data/en/tips/2-trekking.yml
@@ -10,7 +10,7 @@ source:
       Again, you're asked to present the passport copy plus a pic.<br>
       <a href="http://www.greathimalayatrails.com/trekking-permits/" target="_blank">Here</a> you can find more info and better understand what kind of permit you need.<br>
       Whatever you may need, you can have it at a tourist office in Kathmandu or Pokhara. 
-      We obtained both our docs (TIMS Card + ACAP) <a href="https://www.google.com/maps/search/tourist+service+center+kathmandu/@27.7019719,85.3147664,17z/data=!3m1!4b1" target="_blank">here</a>, at the Tourist Service Center in Kathmandu. Check open hours before going there.
+      We obtained both our docs (TIMS Card + ACAP) <a href="https://osm.org/go/zrWcm36ni?m=" target="_blank">here</a>, at the Tourist Service Center in Kathmandu. Check open hours before going there.
 
   - icon: fa fa-check-square-o
     number: 2
