--- a/data/it/tips/2-trekking.yml
+++ b/data/it/tips/2-trekking.yml
@@ -9,7 +9,7 @@ source:
       - <b>Trek permits</b>. In base a dove avete in programma di andare, vi verrà richiesto di acquistare un permesso specifico e pagare la fee corrispondente. Anche qui dovrete avere una copia del passaporto e 1 fototessera.<br>
       <a href="http://www.greathimalayatrails.com/trekking-permits/" target="_blank">Qui</a> potete trovare più informazioni sul tipo di permesso che vi servirà.<br>
       Di qualsiasi permesso abbiate bisogno, potete richiederli ad un ufficio turistico a Kathmandu o Pokhara. 
-      Noi gli abbiamo ottenuti entrambi (TIMS Card e ACAP) <a href="https://www.google.com/maps/search/tourist+service+center+kathmandu/@27.7019719,85.3147664,17z/data=!3m1!4b1" target="_blank">qui</a>, presso il Tourist Service Center a Kathmandu. Controllate gli orari di apertura prima di andarci. 
+      Noi gli abbiamo ottenuti entrambi (TIMS Card e ACAP) <a href="https://osm.org/go/zrWcm36ni?m=" target="_blank">qui</a>, presso il Tourist Service Center a Kathmandu. Controllate gli orari di apertura prima di andarci. 
 
   - icon: fa fa-check-square-o
     number: 2
