[fix]: bold error

--- a/data/it/tips/2-trekking.yml
+++ b/data/it/tips/2-trekking.yml
@@ -4,7 +4,7 @@ source:
     number: 1
     description: > 
       Vi serviranno dei permessi per fare trekking in Nepal.<br>
-      - <b>TIMS Card<b/>. Non è propriamente un permesso ma più un documento per tenere traccia di tutti i trekkers per ragioni di sicurezza. Il costo è di <b>10USD</b> per i gruppi organizzati, <b>20USD</b> per chi viaggia solo.
+      - <b>TIMS Card</b>. Non è propriamente un permesso ma più un documento per tenere traccia di tutti i trekkers per ragioni di sicurezza. Il costo è di <b>10USD</b> per i gruppi organizzati, <b>20USD</b> per chi viaggia solo.
       Dovrete portare una copia del passaporto, 2 fototessere e indicare due contatti di emergenza (uno locale ed uno in patria).<br>
       - <b>Trek permits</b>. In base a dove avete in programma di andare, vi verrà richiesto di acquistare un permesso specifico e pagare la fee corrispondente. Anche qui dovrete avere una copia del passaporto e 1 fototessera.<br>
       <a href="http://www.greathimalayatrails.com/trekking-permits/" target="_blank">Qui</a> potete trovare più informazioni sul tipo di permesso che vi servirà.<br>
