--- a/data/en/tips/4-food.yml
+++ b/data/en/tips/4-food.yml
@@ -25,8 +25,7 @@ source:
     description: People in Nepal drink a lot of tea also because water is not safe. As an alternative to tea, especially in the Himalayan region, people drink plain hot water.
 
   - icon: fa fa-street-view
-    description: Street food is not-so safe in Nepal. There's almost no refrigeration systems and the hygienic conditions are not the best neither.
+    description: Street food is not-so safe in Nepal. There's almost any refrigeration system within the Country and hygienic conditions are not the best neither.
 
   - icon: fa fa-list
-    description: When you read 'buff' on a menu, it litterally means buffalo. Meat is usually consumed in the Kathmandu Valley only but it's not that frequent though. Eating cows is illegal because cows are sacred for Hindu.
-    
+    description: When you read 'buff' on a menu, it litterally means buffalo. Meat is usually consumed in the Kathmandu region only but it's not that frequent though. Eating cows is illegal, indeed cows are sacred for Hindu.
